# miniflow

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py
api/app/: db.py  deps.py  main.py  models.py  schemas.py
api/app/routers/: runs.py  workflows.py
api/tests/: conftest.py  test_migrations.py  test_runs.py  test_workflows.py
infra/envs/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/db/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/redis/: main.tf  outputs.tf  variables.tf
infra/modules/services/: alb.tf  ecr.tf  ecs.tf  iam.tf  outputs.tf  variables.tf
scheduler/: Dockerfile  go.mod
scheduler/cmd/scheduler/: main.go
scheduler/internal/constants/: constants.go
scheduler/internal/db/: db.go
scheduler/internal/model/: model.go
scheduler/internal/queue/: redis.go
scheduler/internal/scheduler/: dag.go  dag_test.go  scheduler.go
shared/schemas/: event.json  task_message.json
tests/integration/: conftest.py  test_happy_path.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  dagLayout.ts  index.css  main.tsx  types.ts
worker-go/: Dockerfile  go.mod
worker-py/: Dockerfile  pyproject.toml
worker-py/tests/: test_consume.py  test_executor.py
worker-py/worker/: constants.py  consume.py  database.py  events.py  executor.py  main.py  models.py
(+18 files in other folders)
