[project]
name = "miniflow-worker-py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
